# spacefy

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
apps/spacefy/: __init__.py  admin.py  apps.py  forms.py  middlewares.py  models.py  tasks.py  urls.py  validators.py  views.py
apps/spacefy/migrations/: 0001_initial.py  0002_alter_like_liked_object_id.py  0002_story_creared_at_story_story_story_user.py  0003_alter_story_story.py  0004_alter_story_story.py  0005_comment_like_friend_friend_friend_user.py
apps/spacefy/static/spacefy/css/: add-photo.css  friends.css  home.css  photos.css
apps/userauth/: admin.py  forms.py  middlewares.py  models.py  urls.py  views.py
apps/userauth/migrations/: 0001_initial.py
core/: settings.py  urls.py
spacefy/: add-photo.css  add-photo.html  add-post.html  add-story.html  another-space.html  chat.css  chat.html  edit.css  edit.html  my-friends.html  my-space.html  notifications.html  photos.html  posts.html  settings.html
templates/: base.html
templates/apps.spacefy/: add-photo.html  add-post.html  add-story.html  another-space-friends.html  another-space-photos.html  another-space-posts.html  another-space.html  create-profile.html  edit.html  home.html  my-space-friends.html  my-space.html  no-profile.html  photos.html  posts.html
templates/apps.userauth/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
tests/: tests_settings.py  tests_urls.py
tests/userauth-tests/: test_forms.py  test_models.py  test_views.py
(+5 files in other folders)
